# spmkit

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  index.html  mkdocs.yml  pyproject.toml  run.sh  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
.superpowers/sdd/: slice-b-task-3-report.md  slice-b-task-4-report.md
ARCHITECTURE/: index.html
BRAND/: index.html
ROADMAP/: index.html
TRACEABILITY/: index.html
UI_DESIGN/: index.html
VALIDATION/: index.html
api/: index.html
cli/: index.html
design/COMPETITION_ROADMAP/: index.html
design/FORCE_SPECTROSCOPY/: index.html
design/ROADMAP/: index.html
design/UI_REDESIGN/: index.html
docs/: ARCHITECTURE.md  BRAND.md  ROADMAP.md  TRACEABILITY.md  UI_DESIGN.md  VALIDATION.md  api.md  cli.md  extending.md  force-spectroscopy.md  getting-started.md  index.md  theory.md  user-guide.md  user-guide.tex
docs/design/: COMPETITION_ROADMAP.md  FORCE_SPECTROSCOPY.md  ROADMAP.md  UI_REDESIGN.md
docs/theory/: index.html
examples/recipes/: adhesion_dmt.yaml  nanoindentation.yaml
extending/: index.html
force-spectroscopy/: index.html
getting-started/: index.html
scripts/: fetch_samples.py  gen_docs_media.py  run_gui_tests.sh
search/: search_index.json
src/spmkit/: __init__.py
src/spmkit/cli/: __init__.py  app.py
src/spmkit/core/: __init__.py  batch.py  compute.py  forcebatch.py  forceexport.py  forcereport.py  project.py  report.py  verify.py
src/spmkit/core/analysis/: __init__.py  calibration.py  chain.py  experimental.py  forcecurve.py  forcevolume.py  forcevolume_fast.py  grains.py  kpfm.py  leveling.py  mechanics.py  profiles.py  resonance.py  roughness.py  simulation.py  spectral.py
src/spmkit/core/export/: __init__.py  writers.py
src/spmkit/core/io/: __init__.py  afmformats_reader.py  bruker_spm.py  forceload.py  gwy.py  igor_ibw.py  jpk.py  jpk_tiff.py  loadany.py  nhf.py  nid.py  npz.py  readers.py  registry.py
src/spmkit/core/models/: __init__.py  force.py  spmdata.py
src/spmkit/core/pipeline/: __init__.py  force_ops.py  operations.py  recipe.py  run.py
src/spmkit/core/plugins/: __init__.py  contracts.py  registry.py
src/spmkit/core/viz/: __init__.py  colormaps.py  figure.py  forcecurve.py  maps.py
src/spmkit/gui/: __init__.py  app.py  app_workspace.py  builtin_modules.py  compare_tab.py  extensions.py  figure_tab.py  main_window.py  nanomech_tab.py  resonance_tab.py  simulator_tab.py  theme.py  view3d_tab.py  viewer_tab.py  welcome.py
src/spmkit/gui/design/: __init__.py  appearance.py  brand.py  pg_colormaps.py  theme.py  tokens.py
src/spmkit/gui/legacy/: __init__.py  app.py  compare_tab.py  figure_tab.py  main_window.py  nanomech_tab.py  simulator_tab.py  theme.py  view3d_tab.py  viewer_tab.py  welcome.py
src/spmkit/gui/panels/: __init__.py  _viewport.py  base.py  batch_table.py  evaporation_canvas.py  figure_panel.py  force_canvas.py  grains_canvas.py  histogram_panel.py  image_analysis.py  image_canvas.py  inspector.py  log_panel.py  map_canvas.py  navigator.py  pipeline_panel.py  resonance_canvas.py  simulator_panel.py  smfs_canvas.py  spectral_canvas.py  view3d_panel.py
src/spmkit/gui/runtime/: __init__.py  tasks.py
src/spmkit/gui/shell/: __init__.py  command_palette.py  fuzzy.py  perspectives.py  status_bar.py  workspace.py
src/spmkit/gui/viewmodels/: __init__.py  batch_vm.py  evaporation_vm.py  figure_vm.py  force_vm.py  grains_vm.py  image_vm.py  map_vm.py  resonance_vm.py  simulator_vm.py  smfs_vm.py  spectral_vm.py  view3d_vm.py
src/spmkit/gui/widgets/: __init__.py  annotation_dialog.py  appearance_dialog.py
tests/: conftest.py  test_architecture.py  test_version.py  test_version_consistency.py
tests/core/: test_afmformats_reader.py  test_annotations.py  test_bruker_spm.py  test_calibration.py  test_channel_type.py  test_cli_force.py  test_cli_gui.py  test_cli_image.py  test_experimental.py  test_export.py  test_export_volume.py  test_figure_render.py  test_force.py  test_force_ops.py  test_forcebatch.py  test_forcecurve.py  test_forcecurve_display.py  test_forceexport.py  test_forceload.py  test_forcereport.py  test_forcevolume.py  test_forcevolume_fast.py  test_grains.py  test_gwy.py  test_igor_ibw.py  test_io_jpk.py  test_io_nid.py  test_jpk_tiff.py  test_kpfm.py  test_leveling.py  test_maps_grid_report.py  test_mechanics.py  test_nhf.py  test_npz.py  test_pipeline.py  test_plugins.py  test_profiles.py  test_project.py  test_resonance.py  test_robustness.py  (+8 more)
tests/e2e/: conftest.py
tests/e2e/cli/: __init__.py  test_image_journey.py
tests/e2e/gui/: test_image_journey.py
tests/gui/: conftest.py  test_app_workspace.py  test_appearance.py  test_batch.py  test_brand.py  test_channel_selection.py  test_design.py  test_e2e_flows.py  test_evaporation.py  test_extensions.py  test_figure_annotation.py  test_figure_panel.py  test_force_panels.py  test_force_vm.py  test_grains_spectral.py  test_image_analysis.py  test_image_panel.py  test_log_panel.py  test_map_panels.py  test_map_vm.py  test_panels.py  test_pipeline_panel.py  test_report_command.py  test_resonance.py  test_shell.py  test_simulator_panel.py  test_smfs_vm.py  test_smoke.py  test_smoke_workspace.py  test_spmproj.py  test_tasks.py  test_view3d.py  test_view3d_panel.py  test_workspace.py
tests/validation/: test_evaporation_real.py  test_nanomech_real.py  test_nid_vs_gwyddion.py  test_recovery.py  test_robustness.py  test_traceability.py
theory/: index.html
user-guide/: index.html
