[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spmkit"
version = "0.1.0"
description = "Analizador open-source de datos AFM/KPFM para microscopía de sonda de barrido (SPM)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "José Labarca", email = "joselabarcabaeza11@hotmail.com" },
    { name = "Tomás Corrales" },
]
maintainers = [{ name = "SPM Lab UTFSM" }]
keywords = ["afm", "kpfm", "spm", "nanosurf", "microscopy", "roughness", "nid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.24",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
hdf5 = ["h5py>=3.8"]
gwy = ["gwyfile>=0.3"]                       # interop con Gwyddion (.gwy)
nanosurf = ["NSFopen>=2.2"]                  # lector .nhf validado (NanoSurf)
grains = ["scipy>=1.10"]                     # detección de granos/partículas
viz = [                                       # figuras de publicación
    "matplotlib>=3.8",
    "cmcrameri>=1.7",
    "matplotlib-scalebar>=0.8",
]
report = ["spmkit[viz]", "jinja2>=3.1"]      # reportes HTML/PDF
gui = ["PyQt6>=6.6", "pyqtgraph>=0.13", "spmkit[viz]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "black>=24.0",
    "pre-commit>=3.7",
]
test-gui = ["pytest-qt>=4.4"]  # tests de GUI (requiere también el extra 'gui')
all = ["spmkit[hdf5,gwy,nanosurf,grains,viz,report,gui]"]

[project.urls]
Homepage = "https://github.com/kegouro/spmkit"
Repository = "https://github.com/kegouro/spmkit"
Issues = "https://github.com/kegouro/spmkit/issues"

[project.scripts]
spmkit = "spmkit.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/spmkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=spmkit --cov-report=term-missing"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# typer usa llamadas a Option()/Argument() en los defaults (patrón idiomático).
"src/spmkit/cli/*.py" = ["B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
packages = ["spmkit"]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# La capa GUI es pegamento de PyQt6; sus stubs marcan muchos Optional (statusBar(),
# addToolBar()...) y firmas de eventos. Mantenemos el chequeo estricto en el core.
module = "spmkit.gui.*"
disable_error_code = ["union-attr", "override"]
