[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spmkit"
version = "0.1.2"
description = "Analizador open-source de datos AFM/KPFM para microscopía de sonda de barrido (SPM)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "José Labarca", email = "jlabarca@usm.cl" },
    { name = "Tomás Corrales" },
]
maintainers = [{ name = "SPM Lab UTFSM" }]
keywords = ["afm", "kpfm", "spm", "nanosurf", "microscopy", "roughness", "nid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.24",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",  # serialización de Recipe (pipeline reproducible)
]

[project.optional-dependencies]
hdf5 = ["h5py>=3.8"]
gwy = ["gwyfile>=0.3"]                       # interop con Gwyddion (.gwy)
nanosurf = ["NSFopen>=2.2"]                  # lector .nhf validado (NanoSurf)
afm = ["afmformats>=0.18"]                   # lectores de la cola larga (JPK QI, .ibw, HDF5, NT-MDT…)
grains = ["scipy>=1.10"]                     # detección de granos/partículas
parallel = ["joblib>=1.3"]                   # backend paralelo opcional para force-volumes grandes
pandas = ["pandas>=2.0"]                      # export a DataFrame (batch, resultados)
viz = [                                       # figuras de publicación
    "matplotlib>=3.8",
    "cmcrameri>=1.7",
    "matplotlib-scalebar>=0.8",
]
report = ["spmkit[viz]", "jinja2>=3.1"]      # reportes HTML/PDF
gui = ["PyQt6>=6.6", "pyqtgraph>=0.13", "spmkit[viz]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "black>=24.0",
    "pre-commit>=3.7",
]
test-gui = ["pytest-qt>=4.4"]  # tests de GUI (requiere también el extra 'gui')
docs = ["mkdocs-material>=9.5"]
all = ["spmkit[hdf5,gwy,nanosurf,grains,viz,report,gui]"]

[project.urls]
Homepage = "https://github.com/kegouro/spmkit"
Repository = "https://github.com/kegouro/spmkit"
Issues = "https://github.com/kegouro/spmkit/issues"

[project.scripts]
spmkit = "spmkit.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/spmkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=spmkit --cov-report=term-missing"
qt_api = "pyqt6"  # los tests de GUI usan PyQt6 (no PySide6 si coexiste)

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# typer usa llamadas a Option()/Argument() en los defaults (patrón idiomático).
"src/spmkit/cli/*.py" = ["B008"]
# theme.py es mayormente una hoja de estilo QSS; envolver sus líneas la haría ilegible.
"src/spmkit/gui/design/theme.py" = ["E501"]
# forcereport.py incrusta plantillas HTML/LaTeX; envolverlas rompería el markup.
"src/spmkit/core/forcereport.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
# 3.12 para que mypy parsee los stubs de numpy ≥2.5 (usan `type` statements). El código
# sigue siendo compatible con 3.11+ (lo garantiza ruff target-version py311).
python_version = "3.12"
packages = ["spmkit"]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# La capa GUI es pegamento de PyQt6; sus stubs marcan muchos Optional (statusBar(),
# addToolBar()...) y firmas de eventos. Mantenemos el chequeo estricto en el core.
module = "spmkit.gui.*"
disable_error_code = ["union-attr", "override"]
